Add: setup and mark

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 markers =
+    user_basket: marker for tests where user add item to basket from product page
+    login_guest: marker for guest
     need_review: marker for reviewer
